--- a/mario.html
+++ b/mario.html
@@ -33,7 +33,10 @@
         </div>
       </div>
     </div>
-    <script src="mario.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+    <script type='text/javascript' src="mario.js"></script>
   </body>
 
 ﻿</html>
